@@ -7,10 +7,10 @@
  * Web                http://sourceforge.net/projects/jena/
  * Created            10 Feb 2003
  * Filename           $RCSfile: OntModel.java,v $
- * Revision           $Revision: 1.37 $
+ * Revision           $Revision: 1.38 $
  * Release status     $State: Exp $
  *
- * Last modified on   $Date: 2004-01-30 17:29:12 $
+ * Last modified on   $Date: 2004-05-10 13:50:28 $
  *               by   $Author: ian_dickinson $
  *
  * (c) Copyright 2002, 2003, Hewlett-Packard Development Company, LP
@@ -70,7 +70,7 @@ import java.util.*;
  * 
  * @author Ian Dickinson, HP Labs
  *         (<a  href="mailto:Ian.Dickinson@hp.com" >email</a>)
- * @version CVS $Id: OntModel.java,v 1.37 2004-01-30 17:29:12 ian_dickinson Exp $
+ * @version CVS $Id: OntModel.java,v 1.38 2004-05-10 13:50:28 ian_dickinson Exp $
  */
 public interface OntModel
     extends InfModel
@@ -1463,6 +1463,43 @@ public interface OntModel
      */
     public ExtendedIterator queryFor( BindingQueryPlan query, List altQueries, Class asKey );
 
+    
+    /**
+     * <p>If this OntModel is presenting an OWL model, answer the minimum OWL language 
+     * level that the constructs
+     * used in this model lie entirely within.  The three possible return values are 
+     * {@link OWL#FULL_LANG} for OWL-full, 
+     * {@link OWL#DL_LANG} for OWL-DL or
+     * {@link OWL#LITE_LANG} for OWL-lite.
+     * Note that these URI's are <strong>not</strong> officially sanctioned by the WebOnt 
+     * working group.  For unknown reasons, the working group chose not to assign official
+     * URI's to represent the different OWL language levels. There is a slim chance that this
+     * may change in future, in which case these return values will change apropriately.
+     * In addition to the method return value, 
+     * the given <code>problems</problems> list, if non-null, will be filled with the syntax
+     * problems detected by the {@link com.hp.hpl.jena.ontology.tidy.Checker syntax checker}.
+     * </p>
+     * <p>
+     * The Jena OWL syntax checker will normally list as problems those constructs used in
+     * this model that are in OWL Full but not permitted in OWL DL.  The exception to this
+     * is if the {@linkplain #getProfile() language profile} for this model is  
+     * {@linkplain OWLLiteProfile OWL Lite}, then the syntax checker will
+     * test for constructs that lie in OWL-DL or OWL-Full and hence outside in OWL-Lite.
+     * </p>
+     * <p>
+     * <strong>Note</strong> that peforming this test requires every statement in the model
+     * to be examined, so it can be quite an expensive operation on large models, or on
+     * persistent database models.
+     * </p>
+     * 
+     * @param problems A list that, if non-null, will have the various problems discovered by the OWL syntax
+     * checker added to it.
+     * @return A resource denoting the minimum OWL language level for this model
+     * @exception OntologyException if this model is not an OWL model
+     */
+    public Resource getOWLLanguageLevel( List problems );
+    
+    
     // output operations
     
     /** 
